--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,10 @@
 %template by: lnv
+%Added with pandoc template by pan
 
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+%
 \documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
@@ -11,7 +16,86 @@
 \usepackage{enumitem}
 \usepackage{booktabs}
 \usepackage{wrapfig}
+\usepackage{lmodern}
+\usepackage{amssymb,amsmath}
+\usepackage{ifxetex,ifluatex}
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+  \usepackage[T1]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provide euro and other symbols
+\else % if luatex or xetex
+  \usepackage{unicode-math}
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\fi
+% Use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+\IfFileExists{microtype.sty}{% use microtype if available
+  \usepackage[]{microtype}
+  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+\makeatletter
+\@ifundefined{KOMAClassName}{% if non-KOMA class
+  \IfFileExists{parskip.sty}{%
+    \usepackage{parskip}
+  }{% else
+    \setlength{\parindent}{0pt}
+    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
+}{% if KOMA class
+  \KOMAoptions{parskip=half}}
+\makeatother
+\usepackage{xcolor}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\hypersetup{
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
+\urlstyle{same} % disable monospaced font for URLs
+\usepackage{color}
+\usepackage{fancyvrb}
+\newcommand{\VerbBar}{|}
+\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+% Add ',fontsize=\small' for more characters per line
+\newenvironment{Shaded}{}{}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{#1}}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.49,0.56,0.16}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.53,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.56,0.13,0.00}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.73,0.13,0.13}{\textit{#1}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.02,0.16,0.49}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.40,0.40,0.40}{#1}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.74,0.48,0.00}{#1}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.73,0.40,0.53}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.10,0.09,0.49}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{#1}}}}
+\setlength{\emergencystretch}{3em} % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 
+\author{}
+\date{}
 \geometry{left=1.25cm,right=1.25cm,bottom=1.5cm,top=0.75cm}
 \newcommand{\bfu}[1]{{\bf \MakeUppercase{#1}}}
 \newcommand{\nilai}[1]{\IfStrEq{#1}{}{}{{\bf [#1]}}}
@@ -38,7 +122,7 @@
 \begin{minipage}{0.125\textwidth}\includegraphics[scale=0.3]{unparpng}\end{minipage}\begin{minipage}{0.7\textwidth}\begin{center}{\bf \large FAKULTAS TEKNOLOGI INFORMASI DAN SAINS\\UNIVERSITAS KATOLIK PARAHYANGAN\\ UJIAN \IfStrEq{\ujian}{UTS}{TENGAH}{AKHIR} SEMESTER \MakeUppercase{\semester} \\TAHUN AKADEMIK \tahun}\end{center} \end{minipage}
 
 \renewcommand{\arraystretch}{1.25}
-\begin{center}\begin{tabular} {l l p{11.8cm}}\midrule \toprule \bfu{Kode \& Nama Mata Kuliah}	&:& \kode\ -- \namaMK \\\bfu{Program Studi}&:& \prodi \\\bfu{Sifat Ujian} &:& \IfStrEq{\sifat}{buka}{\bfu{buka}}{\bfu{tutup}} \bfu{BUKU}\\\bfu{Hari/Tanggal} &:& \hari/\tanggal \\\bfu{Waktu Pengerjaan} &:& \waktu\ \bfu{MENIT}\\\bfu{Dosen} &:& \dosens\\ \bottomrule \end{tabular}\end{center}
+\begin{center}\begin{tabular} {l l p{11.8cm}}\midrule \toprule \bfu{Kode \& Nama Mata Kuliah} &:& \kode\ -- \namaMK \\\bfu{Program Studi}&:& \prodi \\\bfu{Sifat Ujian} &:& \IfStrEq{\sifat}{buka}{\bfu{buka}}{\bfu{tutup}} \bfu{BUKU}\\\bfu{Hari/Tanggal} &:& \hari/\tanggal \\\bfu{Waktu Pengerjaan} &:& \waktu\ \bfu{MENIT}\\\bfu{Dosen} &:& \dosens\\ \bottomrule \end{tabular}\end{center}
 
 \IfStrEq{\petunjuk}{}{}{\begin{minipage}{0.1\textwidth} {\bf Petunjuk:}\end{minipage} \begin{minipage}{0.85\textwidth} \petunjuk \end{minipage}}
 
