Move image to a dedicated directory

--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@
 \begin{document}
 
 %% ========================= HEADER ===========================================
-\begin{minipage}{0.125\textwidth}\includegraphics[scale=0.3]{unparpng}\end{minipage}\begin{minipage}{0.7\textwidth}\begin{center}{\bf \large FAKULTAS TEKNOLOGI INFORMASI DAN SAINS\\UNIVERSITAS KATOLIK PARAHYANGAN\\ UJIAN \IfStrEq{\ujian}{UTS}{TENGAH}{AKHIR} SEMESTER \MakeUppercase{\semester} \\TAHUN AKADEMIK \tahun}\end{center} \end{minipage}
+\begin{minipage}{0.125\textwidth}\includegraphics[scale=0.3]{images/unparpng}\end{minipage}\begin{minipage}{0.7\textwidth}\begin{center}{\bf \large FAKULTAS TEKNOLOGI INFORMASI DAN SAINS\\UNIVERSITAS KATOLIK PARAHYANGAN\\ UJIAN \IfStrEq{\ujian}{UTS}{TENGAH}{AKHIR} SEMESTER \MakeUppercase{\semester} \\TAHUN AKADEMIK \tahun}\end{center} \end{minipage}
 
 \renewcommand{\arraystretch}{1.25}
 \begin{center}\begin{tabular} {l l p{11.8cm}}\midrule \toprule \bfu{Kode \& Nama Mata Kuliah} &:& \kode\ -- \namaMK \\\bfu{Program Studi}&:& \prodi \\\bfu{Sifat Ujian} &:& \IfStrEq{\sifat}{buka}{\bfu{buka}}{\bfu{tutup}} \bfu{BUKU}\\\bfu{Hari/Tanggal} &:& \hari/\tanggal \\\bfu{Waktu Pengerjaan} &:& \waktu\ \bfu{MENIT}\\\bfu{Dosen} &:& \dosens\\ \bottomrule \end{tabular}\end{center}
